# PoliteScrape

./: README.md  __init__.py  architecture.md  pyproject.toml
code/: __init__.py  cli.py  config.py  extractor.py  jsonl_sink.py  time.py
code/extract/: extractor.py
code/main/: __init__.py  config.py  crawler.py  fetcher.py  rate_limiter.py  robots.py
code/storage/: jsonl_sink.py  sqlite_sink.py
code/utils/: hashing.py  logging.py  test_integration.py  time.py
docs/: architecture.md  usage.md
examples/: config.yaml  sample.html
tests/: page2.html  test_rate_limiter.py  test_robots.py
tests/fixtures/: page1.html
