 [project]
 name = "politescrape"
 version = "0.1.0"
 description = "Polite-by-default async web scraping framework with CLI and library."
 readme = "README.md"
 requires-python = ">=3.11"
 license = { file = "LICENSE" }
 authors = [{ name = "PoliteScrape Maintainers" }]
 keywords = ["web scraping", "crawler", "polite", "async", "httpx"]
 classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Topic :: Internet :: WWW/HTTP",
 ]
 dependencies = [
   "httpx>=0.27.0,<0.28.0",
   "tenacity>=8.2.3",
   "typer>=0.12.3",
   "pydantic>=2.6.4",
   "structlog>=24.1.0",
   "beautifulsoup4>=4.12.3",
  "pyyaml>=6.0.1",
 ]

 [project.optional-dependencies]
 dev = [
   "pytest>=8.1.1",
   "pytest-asyncio>=0.23.6",
   "mypy>=1.9.0",
   "ruff>=0.3.4",
   "black>=24.3.0",
   "types-beautifulsoup4>=4.12.0.20240229",
   "types-urllib3",
 ]

 [project.scripts]
 politescrape = "politescrape.cli:app"

 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"

 [tool.black]
 line-length = 100
 target-version = ["py311", "py312"]

 [tool.ruff]
 line-length = 100
 extend-select = ["B", "C4", "I", "N", "S", "T20"]
 ignore = ["D203", "D212"]
 target-version = "py311"
 fix = false

 [tool.ruff.per-file-ignores]
 "tests/*" = ["S101"]

 [tool.mypy]
 python_version = "3.11"
 strict = true
 warn_unused_configs = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 disallow_untyped_defs = true
 disallow_untyped_calls = true
 disallow_any_generics = true
 no_implicit_optional = true
 check_untyped_defs = true
 show_error_codes = true
